updating functions in desi spec etc

--- a/intro_to_DESI_EDR_files.ipynb
+++ b/intro_to_DESI_EDR_files.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8d73df22-ed6d-4992-b65e-38508e7baa22",
    "metadata": {
     "tags": []
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0bb55fd8-3e6d-4ded-a595-cbf8c0598775",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Not on the desi kernel \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# import DESI related modules - \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdesimodel\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfootprint\u001b[39;00m \u001b[39mimport\u001b[39;00m radec2pix      \u001b[39m# For getting healpix values\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdesispec\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m                             \u001b[39m# Input/Output functions related to DESI spectra\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/Downloads/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdesispec\u001b[39;00m \u001b[39mimport\u001b[39;00m coaddition                \u001b[39m# Functions related to coadding the spectra\u001b[39;00m\n",
+      "\u001b[1;32m/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Not on the desi kernel \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# import DESI related modules - \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdesimodel\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfootprint\u001b[39;00m \u001b[39mimport\u001b[39;00m radec2pix      \u001b[39m# For getting healpix values\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdesispec\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m                             \u001b[39m# Input/Output functions related to DESI spectra\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdesispec\u001b[39;00m \u001b[39mimport\u001b[39;00m coaddition                \u001b[39m# Functions related to coadding the spectra\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'desimodel'"
      ]
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "642c2770-0c94-4fda-984e-913bc7a86e43",
    "metadata": {},
    "outputs": [
@@ -183,33 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "64dbb7a5-1d92-40f7-aa41-1782c913ca1d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['exposures-fuji.fits',\n",
-       " 'healpix',\n",
-       " 'exposures-fuji.csv',\n",
-       " 'tiles-fuji.fits',\n",
-       " 'tiles',\n",
-       " 'run',\n",
-       " 'calibnight',\n",
-       " 'exposures',\n",
-       " 'processing_tables',\n",
-       " 'preproc',\n",
-       " 'redux_fuji.sha256sum',\n",
-       " 'inventory-fuji.txt',\n",
-       " 'exposure_tables',\n",
-       " 'tiles-fuji.csv',\n",
-       " 'zcatalog']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/global/cfs/cdirs/desi/public/edr/spectro/redux/fuji/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# List everything in this directory\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/s2537809/DESI-Mini-Project/intro_to_DESI_EDR_files.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m os\u001b[39m.\u001b[39;49mlistdir(specprod_dir)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/global/cfs/cdirs/desi/public/edr/spectro/redux/fuji/'"
+     ]
     }
    ],
    "source": [
