--- a/SP.2.ipynb
+++ b/SP.2.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download and Produce Spectra"
+    "# Download and Produce Spectra\n"
    ]
   },
   {
